@@ -6321,13 +6321,13 @@ will contain the number of times this instance has restarted.  Note
 this is not the same as recursion (counted by the @code{MAKELEVEL}
 variable).  You should not set, modify, or export this variable.
 
-@vindex MAKE_TTYOUT @r{(whether stdout is a terminal)}
-@vindex MAKE_TTYERR @r{(whether stderr is a terminal)}
-@item MAKE_TTYOUT
-@itemx MAKE_TTYERR
+@vindex MAKE_TERMOUT @r{(whether stdout is a terminal)}
+@vindex MAKE_TERMERR @r{(whether stderr is a terminal)}
+@item MAKE_TERMOUT
+@itemx MAKE_TERMERR
 When @code{make} starts it will check whether stdout and stderr will
 show their output on a terminal.  If so, it will set
-@code{MAKE_TTYOUT} and @code{MAKE_TTYERR}, respectively, to the name
+@code{MAKE_TERMOUT} and @code{MAKE_TERMERR}, respectively, to the name
 of the terminal device (or @code{true} if this cannot be determined).
 If set these variables will be marked for export.  These variables
 will not be changed by @code{make} and they will not be modified if
